--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -22,17 +22,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v3
+    - name: Install vcpkg
+      uses: lukka/run-vcpkg@v7
       with:
-        version: '5.15.2'
-        host: windows
-        target: 'desktop'
-        arch: ${{ matrix.qt_arch }}
-        cache: true
-        setup-python: false
-        tools: 'tools_ifw tools_qtcreator,qt.tools.qtcreator'
-        extra: '--external 7z'
+        vcpkgGitCommitId: '2024.01.12'
+        setupOnly: true
+
+    - name: Install Qt (static)
+      run: |
+        vcpkg install qt5-base:x64-windows-static qt5-multimedia:x64-windows-static qt5-tools:x64-windows-static
 
     - name: Setup MSVC
       uses: microsoft/setup-msbuild@v1.1
@@ -58,9 +56,9 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_SYSTEM_NAME=Windows \
           -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
+          -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
+          -DVCPKG_TARGET_TRIPLET=x64-windows-static \
           ..
-      env:
-        CMAKE_PREFIX_PATH: ${{ runner.workspace }}/Qt/5.15.2/${{ matrix.qt_arch }}
 
     - name: Build
       shell: bash
@@ -68,19 +66,12 @@ jobs:
         cd build
         ninja
 
-    - name: Deploy Qt Dependencies
-      shell: bash
-      run: |
-        cd build
-        windeployqt --release --no-translations --no-plugins --no-opengl-sw YinYue.exe
-
     - name: Package
       shell: bash
       run: |
         cd build
         mkdir -p package
         cp YinYue.exe package/
-        cp *.dll package/
         cd package
         7z a ../YinYue-windows-x64.zip *
 
