--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -22,15 +22,25 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install vcpkg
-      uses: lukka/run-vcpkg@v7
+    - name: Cache vcpkg
+      uses: actions/cache@v3
       with:
-        vcpkgGitCommitId: '2024.01.12'
-        setupOnly: true
+        path: |
+          C:/vcpkg
+          !C:/vcpkg/buildtrees
+          !C:/vcpkg/packages
+          !C:/vcpkg/downloads
+        key: vcpkg-${{ runner.os }}-${{ hashFiles('**/vcpkg.json') }}
+
+    - name: Setup vcpkg
+      run: |
+        git clone https://github.com/Microsoft/vcpkg.git C:/vcpkg
+        C:/vcpkg/bootstrap-vcpkg.bat
+        C:/vcpkg/vcpkg integrate install
 
     - name: Install Qt (static)
       run: |
-        vcpkg install qt5-base:x64-windows-static qt5-multimedia:x64-windows-static qt5-tools:x64-windows-static
+        C:/vcpkg/vcpkg install qt5-base:x64-windows-static qt5-multimedia:x64-windows-static qt5-tools:x64-windows-static
 
     - name: Setup MSVC
       uses: microsoft/setup-msbuild@v1.1
@@ -56,7 +66,7 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_SYSTEM_NAME=Windows \
           -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
-          -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
+          -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake \
           -DVCPKG_TARGET_TRIPLET=x64-windows-static \
           ..
 
