--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,24 @@ cmake_minimum_required(VERSION 3.16...3.25)
 
 project(YinYue VERSION 0.1 LANGUAGES CXX)
 
+# 设置输出目录
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
+
+# Debug和Release的输出目录
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
+
+# 设置CMake生成文件的输出目录
+set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
+set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -9,13 +27,18 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Windows 静态链接设置
+# 全局静态编译设置
+set(BUILD_SHARED_LIBS OFF)
+set(CMAKE_FIND_LIBRARY_SUFFIXES .a .lib ${CMAKE_FIND_LIBRARY_SUFFIXES})
+
 if(WIN32)
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MANIFEST:NO")
-    add_definitions(-DQT_STATICPLUGIN)
-    set(BUILD_SHARED_LIBS OFF)
 endif()
+
+# 设置 Qt 静态编译
+set(QT_STATIC ON)
+add_definitions(-DQT_STATICPLUGIN)
 
 # macOS 特定设置
 if(APPLE)
@@ -29,20 +52,36 @@ if(APPLE)
     set(MACOSX_BUNDLE_INFO_STRING "YinYue")
 endif()
 
+# 查找 Qt 组件
+set(Qt_DIR "$ENV{Qt6_DIR}")
+set(CMAKE_PREFIX_PATH "$ENV{Qt6_DIR}")
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools Multimedia MultimediaWidgets Sql)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Multimedia MultimediaWidgets Sql)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Multimedia MultimediaWidgets Sql Core Gui Network)
 
-# Windows 静态插件
+# 静态插件设置（所有平台）
+set(QT_PLUGINS
+    Qt${QT_VERSION_MAJOR}::QGifPlugin
+    Qt${QT_VERSION_MAJOR}::QICOPlugin
+    Qt${QT_VERSION_MAJOR}::QJpegPlugin
+)
+
 if(WIN32)
-    find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Gui Network)
-    set(QT_PLUGINS
+    list(APPEND QT_PLUGINS
         Qt${QT_VERSION_MAJOR}::QWindowsIntegrationPlugin
         Qt${QT_VERSION_MAJOR}::QWindowsVistaStylePlugin
-        Qt${QT_VERSION_MAJOR}::QGifPlugin
-        Qt${QT_VERSION_MAJOR}::QICOPlugin
-        Qt${QT_VERSION_MAJOR}::QJpegPlugin
         Qt${QT_VERSION_MAJOR}::QWindowsAudioPlugin
         Qt${QT_VERSION_MAJOR}::QWindowsMediaPlugin
+    )
+elseif(APPLE)
+    list(APPEND QT_PLUGINS
+        Qt${QT_VERSION_MAJOR}::QCocoaIntegrationPlugin
+        Qt${QT_VERSION_MAJOR}::QMacStylePlugin
+        Qt${QT_VERSION_MAJOR}::QCocoaAudioPlugin
+        Qt${QT_VERSION_MAJOR}::QAVFMediaPlugin
+    )
+else()
+    list(APPEND QT_PLUGINS
+        Qt${QT_VERSION_MAJOR}::QXcbIntegrationPlugin
     )
 endif()
 
@@ -68,9 +107,6 @@ set(SOURCES
 # 头文件目录
 include_directories(
     ${CMAKE_SOURCE_DIR}/src
-    ${CMAKE_SOURCE_DIR}/src/core
-    ${CMAKE_SOURCE_DIR}/src/models
-    ${CMAKE_SOURCE_DIR}/src/ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -93,19 +129,27 @@ else()
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
+# Add include directories to the target specifically
+target_include_directories(YinYue PRIVATE
+    ${CMAKE_SOURCE_DIR}/src
+    ${CMAKE_SOURCE_DIR}/src/core
+    ${CMAKE_SOURCE_DIR}/src/models
+    ${CMAKE_SOURCE_DIR}/src/ui
+)
+
 target_link_libraries(YinYue PRIVATE 
     Qt${QT_VERSION_MAJOR}::Widgets
     Qt${QT_VERSION_MAJOR}::Multimedia
     Qt${QT_VERSION_MAJOR}::MultimediaWidgets
+    Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Gui
+    Qt${QT_VERSION_MAJOR}::Network
+    ${QT_PLUGINS}
 )
 
 # Windows 静态链接
 if(WIN32)
     target_link_libraries(YinYue PRIVATE
-        ${QT_PLUGINS}
-        Qt${QT_VERSION_MAJOR}::Core
-        Qt${QT_VERSION_MAJOR}::Gui
-        Qt${QT_VERSION_MAJOR}::Network
         imm32.lib
         winmm.lib
         dwmapi.lib
@@ -117,6 +161,25 @@ if(WIN32)
         netapi32.lib
         wtsapi32.lib
         setupapi.lib
+    )
+elseif(UNIX AND NOT APPLE)
+    target_link_libraries(YinYue PRIVATE
+        -static-libgcc
+        -static-libstdc++
+        -lpthread
+        -ldl
+        -lrt
+        -lGL
+        -lX11
+        -lXext
+        -lXfixes
+        -lXau
+        -lXdmcp
+        -lfontconfig
+        -lfreetype
+        -lexpat
+        -luuid
+        -lxcb
     )
 endif()
 
