--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -65,18 +65,17 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        cd build
         ninja
 
     - name: Deploy Qt Dependencies
       shell: bash
       run: |
-        cd build
         windeployqt --release --no-translations --no-plugins --no-opengl-sw YinYue.exe
 
     - name: Create Release Directory
       shell: bash
       run: |
+        ls build
         mkdir -p release
         cp build/YinYue.exe release/
         cp build/*.dll release/
