--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 
 # 查找Qt5包
-find_package(Qt5 COMPONENTS Core Test Multimedia REQUIRED)
+find_package(Qt5 COMPONENTS Core Test Multimedia Network REQUIRED)
 
 # 启用测试
 enable_testing()
 
 # 添加测试可执行文件
+add_executable(dlna_test
+    dlna_test.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/dlnamanager.cpp
+)
+
 add_executable(musicfile_test
     musicfile_test.cpp
     ${CMAKE_SOURCE_DIR}/src/models/musicfile.cpp
@@ -20,6 +25,12 @@ add_executable(musicplayer_test
 )
 
 # 链接Qt库
+target_link_libraries(dlna_test PRIVATE
+    Qt5::Core
+    Qt5::Test
+    Qt5::Network
+)
+
 target_link_libraries(musicfile_test PRIVATE
     Qt5::Core
     Qt5::Test
@@ -33,6 +44,10 @@ target_link_libraries(musicplayer_test PRIVATE
 )
 
 # 包含头文件目录
+target_include_directories(dlna_test PRIVATE
+    ${CMAKE_SOURCE_DIR}/src
+)
+
 target_include_directories(musicfile_test PRIVATE
     ${CMAKE_SOURCE_DIR}/src
 )
@@ -42,5 +57,6 @@ target_include_directories(musicplayer_test PRIVATE
 )
 
 # 添加测试
+add_test(NAME dlna_test COMMAND dlna_test)
 add_test(NAME musicfile_test COMMAND musicfile_test)
 add_test(NAME musicplayer_test COMMAND musicplayer_test) 
